# Copyright (c) 2024 Sebastian Pipping <sebastian@pipping.org>
# Licensed under Affero GPL v3 or later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "no-cyclic-imports"
dynamic = ["version"]
description = 'Tool to detect and report on cyclic imports in a Python codebase'
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
keywords = [
  "automation",
  "lint",
  "linter",
]
authors = [
  { name = "Sebastian Pipping", email = "sebastian@pipping.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "import-deps",
  "networkx",
  "stdlib-list",
]

[project.optional-dependencies]
tests = [
  "coverage",
  "parameterized",
  "pytest",
]

[project.scripts]
no-cyclic-imports = "no_cyclic_imports.__main__:_main"

[project.urls]
Homepage = "https://github.com/hartwork/no-cyclic-imports"

[tool.hatch.version]
path = "no_cyclic_imports/version.py"

[tool.hatch.build.targets.sdist]
only-include = [
  "no_cyclic_imports",
]

[tool.coverage.run]
branch = true
source_pkgs = ["no_cyclic_imports"]

[tool.coverage.report]
skip_empty = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "ANN",  # flake8-annotations
  "D1",  # Missing docstring in public ...
  "D203",  # one-blank-line-before-class, to unclash with D211
  "D212",  # multi-line-summary-first-line, to unclash with D213
  "G004",  # Logging statement uses f-string
  "S101",  # Use of `assert` detected
  "SLF001",  # Private member accessed
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "T201",  # `print` found
  "TID252",  # Prefer absolute imports over relative imports from parent modules
]
